update mobile view, add requestcoin page, add sample data chart

--- a/gateio.html
+++ b/gateio.html
@@ -883,7 +883,7 @@
             if(detectMob()){
                 $('.section1-wrapper').slick({
                     arrows: false,
-                    dots: false,
+                    dots: true,
                     infinite: true,
                     slidesToShow: 1,
                     slidesToScroll: 1,
