--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
             <style>
                 
             </style>
-            <div class="market-mobile">
+            <div class="market-table-mobile">
                 <div class="market-mobile-item">
                     <div class="top">
-                        1. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                        1. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -483,13 +483,15 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <!-- <img src="assets/chart_market.png"/> -->
-                        <canvas class="myChartm-1" width="162" height="56" style="z-index: -1;"></canvas>
+                        <canvas class="myChartm-1" width="94" height="33" style="z-index: -1;"></canvas>
                     </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        2. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                        2. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -505,13 +507,15 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <!-- <img src="assets/chart_market.png"/> -->
-                        <canvas class="myChartm-2" width="162" height="56" style="z-index: -1;"></canvas>
+                        <canvas class="myChartm-2" width="94" height="33" style="z-index: -1;"></canvas>
                     </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        3. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                        3. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -527,13 +531,15 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <!-- <img src="assets/chart_market.png"/> -->
-                        <canvas class="myChartm-3" width="162" height="56" style="z-index: -1;"></canvas>
+                        <canvas class="myChartm-3" width="94" height="33" style="z-index: -1;"></canvas>
                     </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        4. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                        4. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -549,13 +555,15 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <!-- <img src="assets/chart_market.png"/> -->
-                        <canvas class="myChartm-4" width="162" height="56" style="z-index: -1;"></canvas>
+                        <canvas class="myChartm-4" width="94" height="33" style="z-index: -1;"></canvas>
                     </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        5. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                        5. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -571,10 +579,133 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <!-- <img src="assets/chart_market.png"/> -->
-                        <canvas class="myChartm-5" width="162" height="56" style="z-index: -1;"></canvas>
+                        <canvas class="myChartm-5" width="94" height="33" style="z-index: -1;"></canvas>
                     </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
                 </div>
+                <div class="market-mobile-item">
+                    <div class="top">
+                        6. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                    </div>
+                    <div class="mid">
+                        <span>Last Price</span>
+                        <span>$31,801.60</span>
+                    </div>
+                    <div class="mid">
+                        <span>24 Charge</span>
+                        <span>-3.31%</span>
+                    </div>
+                    <div class="mid">
+                        <span>Markets Caps</span>
+                        <span>$598.4B</span>
+                    </div>
+                    <div class="mid">
+                        <span>Chart</span>
+                        <canvas class="myChartm-6" width="94" height="33" style="z-index: -1;"></canvas>
+                    </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
+                </div>
+                <div class="market-mobile-item">
+                    <div class="top">
+                        7. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                    </div>
+                    <div class="mid">
+                        <span>Last Price</span>
+                        <span>$31,801.60</span>
+                    </div>
+                    <div class="mid">
+                        <span>24 Charge</span>
+                        <span>-3.31%</span>
+                    </div>
+                    <div class="mid">
+                        <span>Markets Caps</span>
+                        <span>$598.4B</span>
+                    </div>
+                    <div class="mid">
+                        <span>Chart</span>
+                        <canvas class="myChartm-7" width="94" height="33" style="z-index: -1;"></canvas>
+                    </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
+                </div>
+                <div class="market-mobile-item">
+                    <div class="top">
+                        8. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                    </div>
+                    <div class="mid">
+                        <span>Last Price</span>
+                        <span>$31,801.60</span>
+                    </div>
+                    <div class="mid">
+                        <span>24 Charge</span>
+                        <span>-3.31%</span>
+                    </div>
+                    <div class="mid">
+                        <span>Markets Caps</span>
+                        <span>$598.4B</span>
+                    </div>
+                    <div class="mid">
+                        <span>Chart</span>
+                        <canvas class="myChartm-8" width="94" height="33" style="z-index: -1;"></canvas>
+                    </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
+                </div>
+                <div class="market-mobile-item">
+                    <div class="top">
+                        9. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                    </div>
+                    <div class="mid">
+                        <span>Last Price</span>
+                        <span>$31,801.60</span>
+                    </div>
+                    <div class="mid">
+                        <span>24 Charge</span>
+                        <span>-3.31%</span>
+                    </div>
+                    <div class="mid">
+                        <span>Markets Caps</span>
+                        <span>$598.4B</span>
+                    </div>
+                    <div class="mid">
+                        <span>Chart</span>
+                        <canvas class="myChartm-9" width="94" height="33" style="z-index: -1;"></canvas>
+                    </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
+                </div>
+                <div class="market-mobile-item">
+                    <div class="top">
+                        10. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
+                    </div>
+                    <div class="mid">
+                        <span>Last Price</span>
+                        <span>$31,801.60</span>
+                    </div>
+                    <div class="mid">
+                        <span>24 Charge</span>
+                        <span>-3.31%</span>
+                    </div>
+                    <div class="mid">
+                        <span>Markets Caps</span>
+                        <span>$598.4B</span>
+                    </div>
+                    <div class="mid">
+                        <span>Chart</span>
+                        <canvas class="myChartm-10" width="94" height="33" style="z-index: -1;"></canvas>
+                    </div>
+                    <button class="market-btn-buy">
+                        Buy/Sell
+                    </button>
+                </div>
+                
             </div>
             <a href="market.html">
                 View more markets
@@ -600,7 +731,7 @@
                 <h1>
                     Top Cryptocurrencies
                 </h1>
-                <div class="slick-dots">
+                <div class="slick-dot">
                     <div class="0"></div>
                     <div class="1"></div>
                     <div class="2"></div>
@@ -617,7 +748,7 @@
                     <h1>
                         Top Cryptocurrencies
                     </h1>
-                    <div class="slick-dots">
+                    <div class="slick-dot">
                         <div class="0"></div>
                         <div class="1"></div>
                         <div class="2"></div>
