--- a/seeking-list-partners.html
+++ b/seeking-list-partners.html
@@ -257,61 +257,30 @@
         </div>
     </div>
 
-    <div id="advantage">
+    <div id="advantage" class="">
         <div class="container above-grain">
             <div class="wrapper-advantage">
                 <div class="advantage-item">
-                    <img class="invert display" src="assets/fast-forward.svg"/>
-                    <p class="display">
+                    <img class="invert" src="assets/fast-forward.svg"/>
+                    <p class="">
                         Fast<br />payment
                     </p>
                 </div>
                 <div class="advantage-item">
-                    <img class="invert display" src="assets/partners.svg"/>
-                    <p class="display">
+                    <img class="invert" src="assets/partners.svg"/>
+                    <p class="">
                         Over 40 partners who work with us for more than 2 years
                     </p>
                 </div>
                 <div class="advantage-item">
-                    <img class="invert display" src="assets/personal-manager.svg"/>
-                    <p class="display">
+                    <img class="invert" src="assets/personal-manager.svg"/>
+                    <p class="">
                         Personal manager who will support your deal 24/7
                     </p>
                 </div>
                 <div class="advantage-item">
-                    <img class="invert display" src="assets/customized.svg"/>
-                    <p class="display">
-                        Customized approach to business solution
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="advantage" class="mobile">
-        <div class="container above-grain">
-            <div class="wrapper-advantage">
-                <div class="advantage-item">
-                    <img class="invert display" src="assets/fast-forward.svg"/>
-                    <p class="display">
-                        Fast<br />payment
-                    </p>
-                </div>
-                <div class="advantage-item">
-                    <img class="invert display" src="assets/partners.svg"/>
-                    <p class="display">
-                        Over 40 partners who work with us for more than 2 years
-                    </p>
-                </div>
-                <div class="advantage-item">
-                    <img class="invert display" src="assets/personal-manager.svg"/>
-                    <p class="display">
-                        Personal manager who will support your deal 24/7
-                    </p>
-                </div>
-                <div class="advantage-item">
-                    <img class="invert display" src="assets/customized.svg"/>
-                    <p class="display">
+                    <img class="invert" src="assets/customized.svg"/>
+                    <p class="">
                         Customized approach to business solution
                     </p>
                 </div>
