Fixing some incorect layout

--- a/announcement.html
+++ b/announcement.html
@@ -219,7 +219,7 @@
         <div class="container above-grain">
             <div class="article-item">
                 <div>
-                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <img class="invert" src="assets/electron.svg"/>
                     <p>New Cryptocurrency Listing</p>
                 </div>
 
@@ -241,11 +241,13 @@
                     </li>
                 </ul>
 
+                <p class="readmore">Readmore</p>
+
             </div>
             
             <div class="article-item">
                 <div>
-                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <img class="invert" src="assets/electron.svg"/>
                     <p>Latest Binance News</p>
                 </div>
 
@@ -267,11 +269,13 @@
                     </li>
                 </ul>
 
+                <p class="readmore">Readmore</p>
+
             </div>
 
             <div class="article-item">
                 <div>
-                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <img class="invert" src="assets/electron.svg"/>
                     <p>Latest Activities</p>
                 </div>
 
@@ -293,11 +297,13 @@
                     </li>
                 </ul>
 
+                <p class="readmore">Readmore</p>
+
             </div>
 
             <div class="article-item">
                 <div>
-                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <img class="invert" src="assets/electron.svg"/>
                     <p>New Fiat Listings</p>
                 </div>
 
@@ -319,11 +325,13 @@
                     </li>
                 </ul>
 
+                <p class="readmore">Readmore</p>
+
             </div>
 
             <div class="article-item">
                 <div>
-                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <img class="invert" src="assets/electron.svg"/>
                     <p>API Updates</p>
                 </div>
                 
@@ -345,11 +353,13 @@
                     </li>
                 </ul>
 
+                <p class="readmore">Readmore</p>
+
             </div>
 
             <div class="article-item">
                 <div>
-                    <img class="invert" src="assets/icon_menu.svg"/>
+                    <img class="invert" src="assets/electron.svg"/>
                     <p>Crypto Airdrop</p>
                 </div>
 
@@ -370,6 +380,8 @@
                         Snapshot Taken for Symbol (XYM) Airdrop Program for NEM (XEM) Holders
                     </li>
                 </ul>
+
+                <p class="readmore">Readmore</p>
 
             </div>
 
@@ -474,8 +486,9 @@
         </div>
     </div>
 
-    <!-- <script type="text/javascript" src="nav.js"></script>
-    <script>
+    <script type="text/javascript" src="nav.js"></script>
+    <!-- 
+        <script>
         $(document).ready(function(){
             $('.article-mobile').slick({
                     arrows: false,
