--- a/seeking-list-partners.html
+++ b/seeking-list-partners.html
@@ -262,26 +262,26 @@
             <div class="wrapper-advantage">
                 <div class="advantage-item">
                     <img class="invert" src="assets/fast-forward.svg"/>
-                    <p class="">
-                        Fast<br />payment
+                    <p class="description">
+                        <span class="colorfull-text">Fast</span><br />payment
                     </p>
                 </div>
                 <div class="advantage-item">
                     <img class="invert" src="assets/partners.svg"/>
-                    <p class="">
-                        Over 40 partners who work with us for more than 2 years
+                    <p class="description">
+                        Over <span class="colorfull-text">40 partners</span> who work with us for more than 2 years
                     </p>
                 </div>
                 <div class="advantage-item">
                     <img class="invert" src="assets/personal-manager.svg"/>
-                    <p class="">
-                        Personal manager who will support your deal 24/7
+                    <p class="description">
+                        Personal manager who will support your deal <span class="colorfull-text">24/7</span>
                     </p>
                 </div>
                 <div class="advantage-item">
                     <img class="invert" src="assets/customized.svg"/>
-                    <p class="">
-                        Customized approach to business solution
+                    <p class="description">
+                        <span class="colorfull-text">Customized</span> approach to business solution
                     </p>
                 </div>
             </div>
@@ -360,11 +360,6 @@
         </div>
     </div>
 
-
-    
-
-
-    
     <div id="btm-footer">
         <div class="container above-grain">
             <img class="night" src="assets/logo.svg"/>
@@ -390,9 +385,9 @@
     </div>
 
     <script type="text/javascript" src="nav.js"></script>
-    <script>
+    <!-- <script>
         var totalChart = 5
-    </script>
-    <script type="text/javascript" src="theChart.js"></script>
+    </script> -->
+    <!-- <script type="text/javascript" src="theChart.js"></script> -->
 </body>
 </html>
