--- a/seeking-list-partners.html
+++ b/seeking-list-partners.html
@@ -288,6 +288,14 @@
         </div>
     </div>
 
+    <div id="bottom-head">
+        <div class="container above-grain">
+            <div class="bottom-head">
+                Let’s Make Partnership Bytedex
+            </div>
+        </div>
+    </div>
+
     <div id="top-footer">
         <div class="container above-grain">
             <div class="left-footer">
