--- a/bext.html
+++ b/bext.html
@@ -313,7 +313,7 @@
         <div class="container above-grain">
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm1.svg"/>
+                    <img class="invert" src="assets/bext-itm1.svg"/>
                     <span>
                         Reduced Commission
                     </span>
@@ -324,7 +324,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm2.svg"/>
+                    <img class="invert" src="assets/bext-itm2.svg"/>
                     <span>
                         Discount
                     </span>
@@ -335,7 +335,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm3.svg"/>
+                    <img class="invert" src="assets/bext-itm3.svg"/>
                     <span>
                         Payment with BEXT
                     </span>
@@ -346,7 +346,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm4.svg"/>
+                    <img class="invert" src="assets/bext-itm4.svg"/>
                     <span>
                         Exclusive
                     </span>
@@ -357,7 +357,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm5.svg"/>
+                    <img class="invert" src="assets/bext-itm5.svg"/>
                     <span>
                         Bonuses
                     </span>
@@ -368,7 +368,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm6.svg"/>
+                    <img class="invert" src="assets/bext-itm6.svg"/>
                     <span>
                         Activities
                     </span>
@@ -379,7 +379,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm7.svg"/>
+                    <img class="invert" src="assets/bext-itm7.svg"/>
                     <span>
                         Earning and Staking
                     </span>
@@ -390,7 +390,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm8.svg"/>
+                    <img class="invert" src="assets/bext-itm8.svg"/>
                     <span>
                         Swap to Exchange
                     </span>
@@ -401,7 +401,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm9.svg"/>
+                    <img class="invert" src="assets/bext-itm9.svg"/>
                     <span>
                         Trade Options
                     </span>
@@ -412,7 +412,7 @@
             </div>
             <div class="section3-itm">
                 <div>
-                    <img src="assets/bext-itm10.svg"/>
+                    <img class="invert" src="assets/bext-itm10.svg"/>
                     <span>
                         Pro Bytedex
                     </span>
@@ -458,7 +458,7 @@
             </h1>
             <div>
                 <div>
-                    <img src="assets/bext-section5-img1.svg" />
+                    <img class="invert" src="assets/bext-section5-img1.svg" />
                     <h2>
                         Listed on Top 10
                     </h2>
@@ -467,7 +467,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="assets/bext-section5-img2.svg" />
+                    <img class="invert" src="assets/bext-section5-img2.svg" />
                     <h2>
                         Super Charge
                     </h2>
@@ -476,7 +476,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="assets/bext-section5-img3.svg" />
+                    <img class="invert" src="assets/bext-section5-img3.svg" />
                     <h2>
                         Expansion
                     </h2>
